--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure-rest/ai-inference": "^1.0.0-beta.6",
     "@azure/core-auth": "^1.9.0",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   }
